--- a/index.html
+++ b/index.html
@@ -27,22 +27,36 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<ul>
-							<a href="#">
-								<li>Главная</li></a>
-							<a href="#">
-								<li>О нас</li></a>
-							<a href="#">
-								<li>Команда</li></a>
-							<a href="#">
-								<li><img src="img/logo.png" alt=""></li></a>
-							<a href="#">
-								<li>Услуги</li></a>
-							<a href="#">
-								<li>Блог</li></a>
-							<a href="#">
-								<li>Контакты</li></a>
-						</ul>
+						<div class="main-nav">
+							<ul>
+								<a href="#">
+									<li>Главная</li></a>
+								<a href="#">
+									<li>О нас</li></a>
+								<a href="#">
+									<li>Команда</li></a>
+								<a href="#">
+									<li><img src="img/logo.png" alt=""></li></a>
+								<a href="#">
+									<li>Услуги</li></a>
+								<a href="#">
+									<li>Блог</li></a>
+								<a href="#">
+									<li>Контакты</li></a>
+							</ul>
+						</div>
+					</div>
+				</div>
+
+				<div class="main-nav-small">
+					<div class="row">
+						<div class="col-xs-12">
+							<div class="nav-bar" id="nav-bar">
+								<span></span>
+								<span></span>
+								<span></span>
+							</div>
+						</div>
 					</div>
 				</div>
 				<div class="row">
@@ -61,13 +75,13 @@
 		<div class="main-info">
 			<div class="container">
 				<div class="row main-info_first">
-					<div class="col-md-6 align-self-center">
+					<div class="col-xs-12 col-md-6 align-self-center">
 						<div class="info-block_one">
 							<h2>2011</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiselit. Vivamus varius nec diam vitae hendrerit bigus mit.</p>
 						</div>
 					</div>
-					<div class="col-md-6 align-self-end">
+					<div class="col-xs-12 col-md-6 align-self-end">
 						<div class="info-block_two">
 							<h2>2012</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiselit. Vivamus varius nec diam vitae hendrerit bigus mit.
@@ -77,13 +91,13 @@
 				</div>
 
 				<div class="row main-info_second">
-					<div class="col-md-6 align-self-center">
+					<div class="col-xs-12 col-md-6 align-self-center">
 						<div class="info-block_one">
 							<h2>2013</h2>
 							<p>Sed at auctor sem, nec tincidunt elit. Pellentesque enim turpis, porttitor ac orci in, ultrices efficitur nisl. Ut odio libero, sodales a tellus eleifend, suscipit dapibus mi.</p>
 						</div>
 					</div>
-					<div class="col-md-6 align-self-end">
+					<div class="col-xs-12 col-md-6 align-self-end">
 						<div class="info-block_two">
 							<h2>2014</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiselit. Vivamus varius nec diam vitae hendrerit bigus mit.
@@ -217,6 +231,7 @@
 		<!-- Placed at the end of the document so the pages load faster -->
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script>window.jQuery || document.write('<script src="js/jquery-3.3.1.min.js"><\/script>')</script>
+		<script src="js/main.js"></script>
 	</body>
 </html>
 
